Refactor: refactor file paths

--- a/Jupyter/Fundamentals/Conditionals/Exercises_1.ipynb
+++ b/Jupyter/Fundamentals/Conditionals/Exercises_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,12 +10,17 @@
      "output_type": "stream",
      "text": [
       "You are old enough to drive.\n",
+      "You need 3 more years to learn to drive.\n",
+      "\n",
       "You are 5 years older than me.\n",
-      "30 is equal to 30\n"
+      "\n",
+      "4 is greater than 3\n"
      ]
     }
    ],
    "source": [
+    "# [Exercise] Python Fundamentals - Conditionals\n",
+    "\n",
     "'''\n",
     "Get user input using input(“Enter your age: ”). \n",
     "If user is 18 or older, give feedback: You are old enough to drive. \n",
