Feat: completed Conditionals Exercises

--- a/Jupyter/Fundamentals/Conditionals/Exercises_1.ipynb
+++ b/Jupyter/Fundamentals/Conditionals/Exercises_1.ipynb
@@ -19,7 +19,7 @@
     }
    ],
    "source": [
-    "# [Exercise] Python Fundamentals - Conditionals\n",
+    "# [Exercises: Level 1] Python Fundamentals - Conditionals\n",
     "\n",
     "'''\n",
     "Get user input using input(“Enter your age: ”). \n",
@@ -71,16 +71,16 @@
     "        print(f\"{a} is equal to {b}\")\n",
     "\n",
     "# Execute the functions\n",
-    "check_driving_age()\n",
-    "check_driving_age()\n",
+    "check_driving_age() # input: 20\n",
+    "check_driving_age() # input: 15\n",
     "\n",
     "print()\n",
     "\n",
-    "compare_ages()\n",
+    "compare_ages() # input: 30\n",
     "\n",
     "print()\n",
     "\n",
-    "compare_numbers()"
+    "compare_numbers() # input: 4 3"
    ]
   }
  ],
