--- a/Jupyter/OOP/oop.ipynb
+++ b/Jupyter/OOP/oop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,8 @@
     }
    ],
    "source": [
+    "# OOP Exercises\n",
+    "\n",
     "class PersonAccount:\n",
     "    def __init__(self, firstname, lastname):\n",
     "        self.firstname = firstname\n",
