--- a/Jupyter/Projects/calculator_program.ipynb
+++ b/Jupyter/Projects/calculator_program.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0 / 0.0 = \n",
+      "Error: Pembagian dengan nol tidak diperbolehkan.\n",
+      "Terima kasih. Sampai jumpa 👋\n"
+     ]
+    }
+   ],
    "source": [
     "# [Exercise] Calculator Program\n",
     "\n",
@@ -73,8 +83,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
