Feat: completed LLM & Deep Learning Exercises

--- a/Jupyter/Tensors/Exercise.ipynb
+++ b/Jupyter/Tensors/Exercise.ipynb
@@ -1,30 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "# @title 0. Checking GPU Availability for TensorFlow\n",
-        "\n",
-        "import tensorflow as tf\n",
-        "\n",
-        "print(tf.config.list_physical_devices(\"GPU\"))"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -32,20 +10,26 @@
         "id": "NsA6QW8SMpc3",
         "outputId": "c37507b1-51fb-4c8c-ba6c-17226e7ef8d9"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+            "[]\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 0. Checking GPU Availability for TensorFlow\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "print(tf.config.list_physical_devices(\"GPU\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,8 +39,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Vector: tf.Tensor([1. 2. 3. 4.], shape=(4,), dtype=float32)\n",
             "Scalar: tf.Tensor(5, shape=(), dtype=int32)\n",
@@ -97,29 +81,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 2. Find the shape, rank and size of the tensors you created in 1.\n",
-        "\n",
-        "print(\"Vector:\")\n",
-        "print(\"Shape:\", vector.shape)\n",
-        "print(\"Rank:\", tf.rank(vector))\n",
-        "print(\"Size:\", tf.size(vector))\n",
-        "\n",
-        "print(\"\\nScalar:\")\n",
-        "print(\"Shape:\", scalar.shape)\n",
-        "print(\"Rank:\", tf.rank(scalar))\n",
-        "print(\"Size:\", tf.size(scalar))\n",
-        "\n",
-        "print(\"\\nMatrix:\")\n",
-        "print(\"Shape:\", matrix.shape)\n",
-        "print(\"Rank:\", tf.rank(matrix))\n",
-        "print(\"Size:\", tf.size(matrix))\n",
-        "\n",
-        "print(\"\\nTensor:\")\n",
-        "print(\"Shape:\", tensor.shape)\n",
-        "print(\"Rank:\", tf.rank(tensor))\n",
-        "print(\"Size:\", tf.size(tensor))\n"
-      ],
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -127,11 +89,10 @@
         "id": "Ey8BIkLoKOJQ",
         "outputId": "071eeb5a-e1ee-4802-b905-d48bb1637fb0"
       },
-      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Vector:\n",
             "Shape: (4,)\n",
@@ -154,19 +115,34 @@
             "Size: tf.Tensor(8, shape=(), dtype=int32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 2. Find the shape, rank and size of the tensors you created in 1.\n",
+        "\n",
+        "print(\"Vector:\")\n",
+        "print(\"Shape:\", vector.shape)\n",
+        "print(\"Rank:\", tf.rank(vector))\n",
+        "print(\"Size:\", tf.size(vector))\n",
+        "\n",
+        "print(\"\\nScalar:\")\n",
+        "print(\"Shape:\", scalar.shape)\n",
+        "print(\"Rank:\", tf.rank(scalar))\n",
+        "print(\"Size:\", tf.size(scalar))\n",
+        "\n",
+        "print(\"\\nMatrix:\")\n",
+        "print(\"Shape:\", matrix.shape)\n",
+        "print(\"Rank:\", tf.rank(matrix))\n",
+        "print(\"Size:\", tf.size(matrix))\n",
+        "\n",
+        "print(\"\\nTensor:\")\n",
+        "print(\"Shape:\", tensor.shape)\n",
+        "print(\"Rank:\", tf.rank(tensor))\n",
+        "print(\"Size:\", tf.size(tensor))\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 3. Create two tensors containing random values between 0 and 1 with shape [5, 300].\n",
-        "\n",
-        "tensor1 = tf.random.uniform(shape=[5, 300])\n",
-        "tensor2 = tf.random.uniform(shape=[5, 300])\n",
-        "\n",
-        "print(\"Tensor 1:\", tensor1, \"\\n\")\n",
-        "print(\"Tensor 2:\", tensor2)\n"
-      ],
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -174,11 +150,10 @@
         "id": "xFCflqhrKpiR",
         "outputId": "fd3c841b-806e-49ea-e146-94b641b6be8f"
       },
-      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Tensor 1: tf.Tensor(\n",
             "[[9.35069799e-01 2.93159366e-01 3.47624779e-01 ... 9.37980771e-01\n",
@@ -200,16 +175,20 @@
             " [0.39861667 0.1697557  0.7395948  ... 0.67870724 0.15673435 0.35786533]], shape=(5, 300), dtype=float32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 3. Create two tensors containing random values between 0 and 1 with shape [5, 300].\n",
+        "\n",
+        "tensor1 = tf.random.uniform(shape=[5, 300])\n",
+        "tensor2 = tf.random.uniform(shape=[5, 300])\n",
+        "\n",
+        "print(\"Tensor 1:\", tensor1, \"\\n\")\n",
+        "print(\"Tensor 2:\", tensor2)\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 4. Multiply the two tensors you created in 3 using matrix multiplication.\n",
-        "\n",
-        "tensor_mult = tf.matmul(tensor1, tf.transpose(tensor2))\n",
-        "print(tensor_mult)\n"
-      ],
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -217,11 +196,10 @@
         "id": "dtiN_vk9K5vr",
         "outputId": "784100a3-6415-4213-a0e9-2124d9a16f98"
       },
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "tf.Tensor(\n",
             "[[70.55658  74.646095 72.409355 73.96684  76.38922 ]\n",
@@ -231,16 +209,17 @@
             " [72.647026 71.64404  75.85521  75.28499  73.739876]], shape=(5, 5), dtype=float32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 4. Multiply the two tensors you created in 3 using matrix multiplication.\n",
+        "\n",
+        "tensor_mult = tf.matmul(tensor1, tf.transpose(tensor2))\n",
+        "print(tensor_mult)\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 5. Multiply the two tensors you created in 3 using dot product.\n",
-        "\n",
-        "tensor_dot = tf.tensordot(tensor1, tf.transpose(tensor2), axes=1)\n",
-        "print(tensor_dot)\n"
-      ],
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -248,11 +227,10 @@
         "id": "9zN-PWcXLHyJ",
         "outputId": "301ba70a-d0d9-480d-b914-88d534bcf88f"
       },
-      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "tf.Tensor(\n",
             "[[70.55658  74.646095 72.409355 73.96684  76.38922 ]\n",
@@ -262,16 +240,17 @@
             " [72.647026 71.64404  75.85521  75.28499  73.739876]], shape=(5, 5), dtype=float32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 5. Multiply the two tensors you created in 3 using dot product.\n",
+        "\n",
+        "tensor_dot = tf.tensordot(tensor1, tf.transpose(tensor2), axes=1)\n",
+        "print(tensor_dot)\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 6. Create a tensor with random values between 0 and 1 with shape [224, 224, 3].\n",
-        "\n",
-        "random_tensor = tf.random.uniform(shape=[224, 224, 3])\n",
-        "print(random_tensor)\n"
-      ],
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -279,11 +258,10 @@
         "id": "pDq-l7oxLTnm",
         "outputId": "bba41066-af51-4958-9f3d-59f5efafa18a"
       },
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "tf.Tensor(\n",
             "[[[7.24982142e-01 2.38647938e-01 4.72600341e-01]\n",
@@ -337,16 +315,17 @@
             "  [5.77347636e-01 2.26977468e-01 7.91784048e-01]]], shape=(224, 224, 3), dtype=float32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 6. Create a tensor with random values between 0 and 1 with shape [224, 224, 3].\n",
+        "\n",
+        "random_tensor = tf.random.uniform(shape=[224, 224, 3])\n",
+        "print(random_tensor)\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 7. Find the min and max values of the tensor you created in 6.\n",
-        "\n",
-        "print(\"Minimum:\", tf.reduce_min(random_tensor))\n",
-        "print(\"Maximum:\", tf.reduce_max(random_tensor))\n"
-      ],
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -354,20 +333,43 @@
         "id": "pcbBySKMLeEP",
         "outputId": "a843ca9b-0fc5-4ecd-ae7e-d92e8d53fc56"
       },
-      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Minimum: tf.Tensor(8.34465e-06, shape=(), dtype=float32)\n",
             "Maximum: tf.Tensor(0.9999969, shape=(), dtype=float32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 7. Find the min and max values of the tensor you created in 6.\n",
+        "\n",
+        "print(\"Minimum:\", tf.reduce_min(random_tensor))\n",
+        "print(\"Maximum:\", tf.reduce_max(random_tensor))\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dG3-BkFyLlIp",
+        "outputId": "c8ddeb63-7340-40b9-8edf-887961b36910"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Original tensor shape: (1, 224, 224, 3)\n",
+            "Squeezed tensor shape: (224, 224, 3)\n"
+          ]
+        }
+      ],
       "source": [
         "# @title 8. Created a tensor with random values of shape [1, 224, 224, 3] then squeeze it to change the shape to [224, 224, 3].\n",
         "\n",
@@ -381,28 +383,28 @@
         "# Print the shapes of the original and squeezed tensors\n",
         "print(\"Original tensor shape:\", random_tensor_squeezable.shape)\n",
         "print(\"Squeezed tensor shape:\", squeezed_tensor.shape)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dG3-BkFyLlIp",
-        "outputId": "c8ddeb63-7340-40b9-8edf-887961b36910"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Original tensor shape: (1, 224, 224, 3)\n",
-            "Squeezed tensor shape: (224, 224, 3)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_f7WLhdNLxkJ",
+        "outputId": "cc242ecf-413a-4ec6-8504-28cd4a7c5dfa"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tensor: tf.Tensor([5 4 3 2 1 9 8 7 6 0], shape=(10,), dtype=int32)\n",
+            "Index with maximum value: 5\n"
+          ]
+        }
+      ],
       "source": [
         "# @title 9. Create a tensor with shape [10] using your own choice of values, then find the index which has the maximum value.\n",
         "\n",
@@ -414,35 +416,11 @@
         "\n",
         "print(\"Tensor:\", my_tensor)\n",
         "print(\"Index with maximum value:\", max_index.numpy())\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_f7WLhdNLxkJ",
-        "outputId": "cc242ecf-413a-4ec6-8504-28cd4a7c5dfa"
-      },
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tensor: tf.Tensor([5 4 3 2 1 9 8 7 6 0], shape=(10,), dtype=int32)\n",
-            "Index with maximum value: 5\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# @title 10. One-hot encode the tensor you created in 9.\n",
-        "\n",
-        "one_hot_tensor = tf.one_hot(my_tensor, depth=tf.size(my_tensor).numpy())\n",
-        "\n",
-        "print(\"One-hot encoded tensor:\\n\", one_hot_tensor)\n"
-      ],
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -450,11 +428,10 @@
         "id": "aRfbLlg6MLkj",
         "outputId": "aa952c92-6959-4fa4-d6ce-e94306915003"
       },
-      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "One-hot encoded tensor:\n",
             " tf.Tensor(\n",
@@ -470,7 +447,39 @@
             " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]], shape=(10, 10), dtype=float32)\n"
           ]
         }
+      ],
+      "source": [
+        "# @title 10. One-hot encode the tensor you created in 9.\n",
+        "\n",
+        "one_hot_tensor = tf.one_hot(my_tensor, depth=tf.size(my_tensor).numpy())\n",
+        "\n",
+        "print(\"One-hot encoded tensor:\\n\", one_hot_tensor)\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
